# PrivyLocker

./: .gitignore  Anchor.toml  README.md
api/: package-lock.json  package.json
api/src/: index.ts  routes.ts  storage.ts
app/: .env.example  calc_disc.js  package-lock.json  package.json  tsconfig.json
app/app/: layout.tsx  page.tsx
app/app/dashboard/: page.tsx
app/app/dashboard/upload/: page.tsx
app/app/verify/[shareId]/: page.tsx
app/components/ui/: WalletProvider.tsx
app/utils/: anchor.ts  encryption.ts  idl.json  ipfs.ts
programs/privy-locker/: Cargo.toml
programs/privy-locker/src/: lib.rs
