[package]
name = "privy-locker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privy_locker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
constant_time_eq = "=0.3.0"
blake3 = "=1.5.1"
inco-lightning = "0.1.4"
# inco-anchor = { version = "0.1.0", optional = true } # Placeholder for Inco SDK
